--- a/10-web2/asset/css/styles.css
+++ b/10-web2/asset/css/styles.css
@@ -1,5 +1,6 @@
 /*Variables*/
 :root{
+    --mx-widht:1320px;
     --color-text-body:#525260;
     --color-primary:#5956e9;
     --color-secondary:#fff;
@@ -8,6 +9,13 @@
     --color-bg-btn:#ffdc60;
     --color-subtitle:#c75c6f;
     --color-title:#292930;
+    --color-bg-services:#f8f8f8;
+    --color-bg-projects:#ECF2F6;
+    --color-bg-dark:#27272E;
+    --color-hover-dark:#303035;
+    --color-text-description:#969EA7;
+    --color-borders:#e3e6e9;
+
 
 }
 /*Estilos generales*/
@@ -92,6 +100,7 @@ body{
 }
 
 .nav__submenu{
+    
     display: block;
     position: absolute;
     top:100%;
@@ -106,6 +115,7 @@ body{
     transition: all 300ms ease-in-out;
 }
 .submenu__item{
+    
     opacity: 0;
     transform: translateX(2rem);
     transition: all 100ms ease-in-out;
@@ -153,7 +163,7 @@ body{
     z-index: 999;
     left: 0;
 }
-.nav__item:hover ,.submenu__item{
+.nav__item:hover .submenu__item{
     opacity: 1;
     transform: translateX(0);
 
@@ -351,13 +361,14 @@ body{
 /*servicios*/
 .layout__services{
     position: relative;
-    margin: 5rem 4rem;
+    margin: 14rem 10rem;
+    margin-bottom: 8rem;
     z-index: 1;
-    border: 1px solid red;
+    
 
 }
 .services__grid{
-    max-width: 1320px;
+    max-width: var(--mx-widht);
     margin:0 auto;
 }
 .services__header{
@@ -365,17 +376,885 @@ body{
     margin-bottom: 2rem;
     
 }
-.services__subtitile{
+.services__subtitile,
+.projects__subtitile,
+.stats__subtitle,
+.reviews__subtitle,
+.clients__subtitle,
+.news__subtitle{
     font-size: 2rem;
     font-weight: 500;
     margin-bottom: 1.5rem;
     color: var(--color-subtitle);
 
 }
-.services__title{
+.services__title,
+.projects__title,
+.stats__title,
+.reviews__title,
+.news__title{
     font-size: 6.7rem;
-    font-weight: 500;
+    font-weight: 400;
     line-height:1.2;
     color: var(--color-title);
+}
+.services__list{
+    display: flex;
+    flex-direction: row;
+   gap: 3rem;
+}
+.services__service{
+    width: 33%;
+    height: 100%;
+    padding: 5rem 4rem;
+    margin-bottom: 4rem;
+    border-radius: 3rem;
+    background: linear-gradient(180deg,var(--color-bg-services),rgba(255,255,225,0));
+    background-color: var(--color-secondary);
+    border: 1px solid ;
+    border-image-source:linear-gradient(90deg,var(--color-bg-services),rgba(255,255,225,0)) ;
+    transition: all 300ms ease-in-out;
+     display: flex;
+     flex-direction: row;
+}
 
+.services__service:hover{
+    border-color: var(--color-bg-services);
+}
+.service__container-img{
+    margin-right: 2.5rem;
+    max-width: 8.5rem;
+    flex: 1;
+
+}
+.service__content{
+    flex: 1;
+}
+.service__title{
+    color: var(--color-title);
+    font-size: 2.4rem;
+    font-weight:500;
+    line-height: 1.4;
+    margin-bottom: 3rem;
+    transition: all 300ms ease-in-out;
+
+}
+.service__link{
+    color: var(--color-title);
+}
+.service__description{
+   font-size: 1.7rem;
+    overflow: hidden;
+   
+    margin-bottom: 4rem;
+
+}
+.service__more{
+    font-size: 1.7rem;
+    position: relative;
+    display: inline-block;
+    font-weight: 500;
+    padding-left: 5rem;
+    color: var(--color-text-body);
+    transition: all 300ms ease-in-out;
+
+}
+.service__more::before{
+    content: "";
+    width: 3.4rem;
+    height: 1.5px;
+    background-color: var(--color-text-body);
+    position: absolute;
+    top:50%;
+    left: 0;
+    transition: all 300ms ease-in-out;
+}
+.service__more:hover,
+.service__title:hover{
+    color: var(--color-primary);
+}
+.service__more:hover::before{
+    background-color: var(--color-primary);
+}
+.services__service--bottom{
+    margin-top: 20rem;
+
+}
+.services__service--midle{
+    margin-top: 10rem;
+    
+}
+.services__service--top{
+    margin-top: 0;
+    
+}
+/*formas atras de los servicios*/
+.service-shapes__item{
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+}
+.service-shapes--shape1{
+    top: -53px;
+    right: 125px;
+
+}
+.service-shapes--shape2{
+    top: 56px;
+    left: 53%;
+
+}
+.service-shapes--shape3{
+    top: 34%;
+    left: 75px;
+}
+/*PROYECTOS*/
+.layout__projects{
+    position: relative;
+
+    background-color: var(--color-bg-projects);
+    padding: 14rem 10rem;
+    z-index: 1;
+
+}
+.projects__grid{
+    max-width: var(--mx-widht);
+    margin:0 auto;
+}
+.projects__header{
+    margin-bottom: 4rem;
+
+}
+.projects__subtitile{
+    text-transform: capitalize;
+}
+/*CATEGORIAS*/
+.projects__categories{
+    display: flex;
+    flex-direction: row;
+    gap: 7rem;
+    margin-bottom: 5.5rem;
+
+}
+.categories__item{
+    position: relative;
+    font-size: 2rem;
+    font-weight: 500;
+    cursor: pointer;
+    padding: 0.8rem 0;
+    transition: all 150ms ease-in-out;
+}
+.categories__item--active,
+.categories__item:hover{
+    border-bottom:3px solid var(--color-primary) ;
+}
+.projects__all{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap:4rem 7rem;
+}
+.projects__project{
+    width: calc(50% - 3.5rem);
+}
+.project__container-img{
+      width: 100%;
+      border-radius: 30px 30px 0 0;
+      overflow: hidden;
+}
+.project__img{
+    width: 100%;
+    transition: all 800ms ease-in-out;
+}
+.projects__project:hover .project__img{
+         transform: scale(1.2);
+}
+.project__content{
+    padding: 4rem 5rem;
+    background-color: var(--color-secondary);
+    border-radius: 0 0 30px 30px;
+    
+}
+.project__title{
+    font-size: 3.2rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--color-title);
+    margin-bottom: 1rem;
+    
+   
+}
+.project__link-title{
+    color: var(--color-title);
+    transition: all 300ms ease-in-out;
+    
+}
+.project__link-title:hover{
+    color: var(--color-banner);
+}
+.project__tags{
+     font-size:1.7rem;
+
+}
+/*formas proyectos*/
+.project-shapes__item{
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+
+    
+}
+.project-shapes__item--shape1{
+    top: 80px;
+    right: 265px;
+}
+.project-shapes__item--shape2{
+    top: 190px;
+    left: 800px;
+}
+.project-shapes__item--shape3{
+    top: 38%;
+    left: 7%;
+}
+/*Estadisticas y clientes*/
+.layout__stats,
+.layout__clients{
+    padding: 14rem 10rem;
+    background-color: var(--color-bg-dark);
+}
+.stats__container,
+.clients__container{
+    max-width: var(--mx-widht);
+    margin: 0 auto;
+
+}
+.stats__header{
+    text-align: center;
+}
+.stats__title,
+.clients__title{
+    font-size: 6.5rem;
+    color: var(--color-secondary);
+    margin-bottom: 3rem;
+
+}
+.stats__description,
+.clients__description
+{
+    font-size: 2rem;
+     width: 60%;
+     margin: 0 auto ;
+     margin-bottom: 4rem; 
+     color: var(--color-text-description);
+}
+.stats__progress{
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+}
+.stats__stat{
+    width: 25%;
+    padding: 7rem 2rem;
+    text-align: center;
+    border-radius: 3rem;
+    border: 1px solid transparent;
+}
+.stats__stat:hover{
+    background: linear-gradient(180deg,var(--color-bg-dark),var(--color-hover-dark));
+    border: 1px solid var(--color-hover-dark);
+}
+.stat__icon{
+  
+    margin-bottom: 2rem;
+    
+}
+.stat__icon>.stat__img{
+    
+    margin: 0 auto;
+    text-align: center;
+}
+.stat__count{
+    display: inline-block;
+    font-size: 6.4rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--color-primary);
+    margin-bottom: 0.5rem;
+    text-align: center;
+
+}
+.stat__title{
+    text-align: center;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.2;
+    
+    color: var(--color-secondary);
+}
+/*reseñas*/
+.layout__reviews{
+    position: relative;
+    z-index: 1;
+    padding-top:14rem ;
+    padding-bottom: 11rem;
+}
+.reviews__grid{
+    max-width: var(--mx-widht);
+    margin: 0 auto;
+}
+.reviews__header{
+    text-align: left;
+    margin-bottom: 6rem;
+}
+.reviews__description,
+.news__description{
+    margin: 3rem 0;
+    width: 50%;
+    font-size: 2rem;
+    color: var(--color-text-description);
+}
+.reviews__container{
+    display: flex;
+    gap: 3rem;
+
+}
+.reviews__review{
+    padding-top:5rem ;
+    padding-bottom: 3rem;
+}
+.review__company{
+    display: inline-block;
+    margin-bottom: 3rem;
+
+}
+.review__description
+{
+    font-size: 2.4rem;
+    font-weight: 500;
+    line-height: 1.2;
+    color: var(--color-text-body);
+    margin-bottom: 4rem;
+}
+.review__author{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+.author__container-img{
+    border-radius: 35px;
+    overflow: hidden;
+    
+
+}
+.author__content{
+    flex: 1;
+    
+}
+.author__name{
+    display: block;
+    font-size: 1.7rem;
+    font-weight: bold;
+    color: var(--color-bg-dark);
+    margin-bottom:0.3rem ;
+}
+.author__description{
+    display: block;
+    font-size: 1.5rem;
+    color: var(--color-text-description);
+    opacity: 0.7;
+}
+.review-shapes__item{
+    position: absolute;
+    z-index: -1;
+    pointer-events: none;
+    top: 135px;
+    right: 33%;
+}
+/*Clientes*/
+.layout__clients{
+    position: relative;
+    z-index: 1;
+    padding-bottom: 12rem;
+}
+.clients__header{
+    text-align: left;
+
+}
+.clients__title{
+    width: 50%;
+    line-height: 1.2;
+    font-weight: 400;
+}
+.clients__description{
+    text-align: left;
+    width: 40%;
+    margin: 0;
+    margin-bottom:6rem ;
+}
+.clients__logos{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 3rem;
+}
+.clients__item{
+    width: calc(25% - 3rem );
+}
+.clients__img{
+    filter: grayscale(100%);
+    opacity: 0.3;
+    transition: all 300ms ease-in-out;
+}
+.clients__item:hover> .clients__img{
+    filter: grayscale(0);
+    opacity: 1;  
+    cursor: pointer;
+
+}
+.client-shapes__item{
+    position: absolute;
+    z-index: -1;
+    top: 10rem;
+    right: 0;
+
+}
+/*Ultimas noticias*/
+.layout__news{
+    position: relative;
+    z-index: 1;
+    padding: 14rem 0;
+}
+.news__container{
+    max-width: var(--mx-widht);
+    margin: 0 auto;
+
+}
+.news__header{
+    text-align: center;
+    margin-bottom: 6rem;
+}
+.news__title{
+    margin-bottom: 3rem;
+}
+.news__description{
+    text-align: center;
+    margin: 0 auto;
+
+
+}
+.news__list{
+    display: flex;
+
+}
+
+.news__new{
+    display: flex;
+    align-items: center;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    padding-right: 2rem;
+    padding-left: 0;
+    border-top: 1px solid var(--color-borders);
+    border-bottom: 1px solid var(--color-borders);
+    gap: 3rem;
+    transition: all 300ms ease-in-out;
+
+}
+.news__new:hover{
+    border-top-color:var(--color-primary) ;
+}
+.news__new:last-child{
+    border-left:1px solid var(--color-borders) ;
+    padding-left: 2.5rem;
+} 
+.new__container-img{
+    overflow: hidden;
+    border-radius: 3rem;
+}
+.new__img{
+    border-radius: 3rem;
+    transition: all 300ms ease-in-out;
+}
+.news__new:hover .new__img{
+    transform: scale(1.1);
+}
+.new__content{
+    flex: 1;
+}
+.new__title{
+    font-size: 2.4rem;
+    font-weight: 300;
+    line-height: 1.2;
+    color: var(--color-title);
+    margin-bottom: 2rem;
+}
+.new__link{
+    color: var(--color-title);
+}.new__description{
+    font-size: 1.7rem;
+    font-weight: normal;
+    color: var(--color-text-description);
+    margin-bottom: 3rem;
+    transition: all 300ms ease-in-out;
+
+}
+.new__title:hover,
+.new__more:hover,
+.new__link:hover{
+    color:var(--color-primary);
+
+}
+.new__more{
+    display: inline-block;
+    font-weight: 700;
+    color: var(--color-hover-dark);
+    font-size: 1.7;
+
+}
+.new__icon{
+    font-size: 1.3rem;
+    vertical-align: middle;
+}
+.new-shapes__item{
+    position: absolute;
+    z-index: -1;
+}
+
+.new-shapes__item--shape1{
+      top: 14rem;
+    left: 31.5rem;
+
+}
+.new-shapes__item--shape2{
+    right: 0;
+    top: 12rem;
+}
+.new-shapes__item--shape3{
+    left: 0;
+    bottom: 8rem;
+}
+.new-shapes__item--shape4{
+    right: 11rem;
+    bottom: 6rem;
+}
+/*CONTACTO*/
+.layout__contact{
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    padding: 0;
+    padding-top: 14rem;
+    padding-bottom: 10rem;
+  
+
+}
+.layout__contact::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 65rem;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--color-primary);
+    z-index: -1;
+
+
+}
+.contact__container{
+    max-width: var(--mx-widht);
+    margin: 0 auto;
+    overflow: hidden;
+}
+.contact__header{
+    margin-bottom: 6.5rem;
+    text-align: center;
+
+}
+.contact__subtitle{
+    display: inline-block;
+    color: var(--color-bg-btn);
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+    
+}
+.contact__title{
+    width: 70%;
+    margin: 0 auto;
+    margin-bottom: 5.5rem;
+    font-size: 6.4rem;
+    line-height: 1.2;
+    font-weight: 500;
+    color: var(--color-secondary);
+
+}
+.contact__btn{
+    display: inline-block;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    padding: 2.3rem 5.5rem;
+    background-color: var(--color-secondary);
+    border-radius:20px ;
+    font-weight: 500;
+    text-align: center;
+    transition: all 300ms ease-in-out;
+}
+.contact__btn:hover{
+    
+    background-color: var(--color-bg-btn);
+}
+.contact__images{
+    position: relative;
+    text-align: center;
+    border-bottom: 1px solid  var(--color-borders);
+
+
+}
+.contact__thumb{
+    position: relative;
+    display: inline-block;
+
+}
+.contact__thumb--chat{
+    margin-bottom: -0.8rem;
+    margin-right:-18rem ;
+    
+}
+.contact__thumb--laptop{
+    position: absolute;
+    bottom: 0;
+    left: 16rem;
+}
+.contact__thumb--mobile{
+    position: absolute;
+    bottom: 0;
+    right: 8rem;
+    
+}
+.backshapes__item{
+    position: absolute;
+    z-index: -1;
+
+}
+.backshapes__item--shape1{
+     top: 0;
+     left: 32%;
+}
+.backshapes__item--shape2{
+    top:18rem ;
+    left: 18%;
+    opacity: 0.5;
+    animation: moveShape3 20s infinite;
+}
+.backshapes__item--shape3{
+    top:31% ;
+    left: 20%;
+    animation: moveShape4 25s infinite;
+}
+.backshapes__item--shape4{
+    top:44% ;
+    left: 28%;
+    animation: moveShape3 25s infinite;
+}
+.backshapes__item--shape5{
+    top:50% ;
+    right: 17%;
+    animation: moveShape4 30s infinite;
+}
+.backshapes__item--shape6{
+    top:26% ;
+    right: 21%;
+    animation: moveShape5 30s infinite;
+}
+.backshapes__item--shape7{
+    top:30% ;
+    right: 15%;
+    animation: moveShape3 30s infinite;
+}
+/*footer*/
+.layout__footer{
+    padding-top:1rem ;
+}
+.footer__container{
+    max-width: var(--mx-widht);
+    margin:0 auto;
+}
+.footer__top{
+    padding-bottom: 7rem;
+}
+.footer__social{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.social__img{
+    display: inline-block;
+    color: var(--color-text-description);
+    font-size:3rem ;
+    padding: 0.5rem;
+    transition: all 300ms ease-in-out;
+}
+.social__link:hover > .social__img{
+      color: var(--color-text-body);
+}
+.footer__main{
+    display: flex;
+    flex-direction: row;
+
+}
+.footer__fleft{
+    flex-basis: 50%;
+}
+.fleft__container{
+    border-right: 1px solid var(--color-borders);
+    padding-right: 8rem;
+    margin-right: 4rem;
+    margin-bottom: 8rem;
+}
+.fleft__title{
+    display: inline-block;
+    font-size: 6.4rem;
+    line-height: 1.2;
+    font-weight: 500;
+    color: var(--color-title);
+    margin-bottom: 2rem;
+}
+.fleft__subtitle{
+    font-size: 1.7rem;
+    margin-bottom: 4rem;
+
+}
+.fleft__group{
+    position: relative;
+    width: 100%;
+    background-color: var(--color-secondary);
+    border-radius: 20px ;
+    height: 7.2rem;
+    padding: 1rem;
+    
+    box-shadow: 0 24px 48px -15px #ddd;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    
+}
+
+.fleft__email-icon{
+    display: inline-block;
+   margin-left: 2rem;
+
+
+}
+.fleft__form-control{
+    display: block;
+    padding: 0.5rem 1.5rem;
+    height: auto;
+    border: none;
+    outline: none;
+    color: var(--color-text-body);
+    margin-left: 1rem;
+    flex: 1;
+
+}
+.fleft__btn{
+    height: 5.2rem;
+    cursor: pointer;
+    border: none;
+    outline: none;
+   
+    background-color: var(--color-primary);
+    color: var(--color-secondary);
+    border-radius: 1.6rem;
+    padding: 1.4rem 3rem;
+    transition: all 300ms ease-in-out;
+}
+.fleft__btn:hover{
+    background-color: var(--color-banner);
+
+}
+.footer__fright{
+    display: flex;
+    flex-direction: row;
+    flex-basis: 50%;
+}
+.footer__widget{
+    margin-bottom: 8rem;
+    flex-basis: 33%;
+}
+.footer__widget--50{
+    flex-basis: 50%;
+}
+.footer__widget--25{
+     flex-basis: 25%;
+}
+.widget__title{
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1.2;
+    color: var(--color-title);
+    margin-bottom: 3rem;
+}
+.widget__link{
+    font-size: 1.8rem;
+    padding:0.8rem 0;
+    display: inline-block;
+    color: var(--color-text-body);
+    transition: all 300ms linear;
+}
+.widget__link:hover{
+    color: var(--color-banner);
+}
+.footer__bottom{
+    font-size: 1.7rem;
+    border-top: 1px solid var(--color-borders);
+    padding: 2.5rem 0;
+    display: flex;
+
+}
+.footer__copyright{
+    flex-basis: 50%;
+}
+.copyright__text{
+    display: inline-block;
+    color: var(--color-text-description);
+}
+.copyright__text > a{
+    display: inline;
+}
+.footer__links{
+    flex-basis: 50%;
+}
+.footer__flinks{
+    position: relative;
+    display: flex;
+    justify-content: flex-end;
+    gap:2rem;
+}
+.flinks__title{
+
+    color:var(--color-text-description);
+    transition: all 300ms ease-in-out;
+    
+}
+.flinks__title:hover{
+    color:var(--color-banner);
+
+}
+.flinks__item{
+    display: inline-block;
+    position: relative;
+    gap: 3.5rem;
+}
+.flinks__item--separator::after{
+    content: "";
+    height: 4px;
+    width: 4px;
+    background-color: var(--color-text-description);
+    border-radius:50%;
+    position: absolute;
+    top: 46%;
+    right: -8%;
 }
