--- a/10-web2/asset/css/responsive.css
+++ b/10-web2/asset/css/responsive.css
@@ -279,3 +279,155 @@
     justify-content: center;
 }
 }
+@media(max-width:770px){
+    .layout__banner{
+        padding: 8rem 3rem;
+    }
+    .banner__title{
+        font-size: 3rem;
+    }
+    .layout__services{
+        margin:7rem 7rem;
+
+    }
+    .reviews__grid,
+    .clients__container,
+    .news__container,
+    .footer__container{
+        max-width: 54rem;
+    }
+    .services__subtitile,
+    .projects__subtitile,
+    .stats__subtitle,
+    .reviews__subtitle,
+    .clients__subtitle,
+    .news__subtitle,
+    .contact__subtitle{
+        font-size: 1.6rem;
+        
+    
+    }
+    .services__title,
+    .projects__title,
+    .stats__title,
+    .reviews__title,
+    .news__title,
+    .contact__title{
+        font-size: 5rem;
+        
+    }
+    .layout__projects{
+        padding: 6rem 4rem;
+    }
+    .projects__all{
+        flex-direction: column;
+    }
+    .projects__project{
+        width: 100%;
+
+    }
+    .layout__stats{
+        padding: 6rem 3rem;
+    }
+    .stat__count{
+        font-size: 3.4rem;
+    }
+    .layout__reviews{
+        padding-top:6rem ;
+        padding-bottom: 3rem;
+    }
+    .reviews__review{
+        padding-top: 2rem;
+        margin-bottom: 3rem;
+    }
+    .layout__news{
+        padding: 6rem 0;
+    }
+    .news__new{
+        display: flex;
+        flex-direction: column;
+    }
+    .new__container-img{
+        width: 100%;
+    }
+    .new__img{
+        width: 100%;
+    }
+    .new__title{
+        font-size: 2rem;
+    }
+    .layout__contact{
+        padding-top: 6rem;
+        padding-bottom: 4rem;
+    }
+    .layout__contact::before{
+        height: 48rem;
+    }
+    .contact__thumb--chat{
+        margin-right: -10rem;
+        margin-bottom: -0.8rem;
+        width: 50%;
+    }
+    
+    .contact__thumb--laptop{
+        left: 12rem;
+        bottom: 0;
+    }
+    .contact__thumb--mobile{
+        bottom: 0;
+        right: -8rem;
+    }
+    .contact__img{
+        width: 35%;
+    }
+    .fleft__container{
+        padding-right: 0;
+        margin-right: 0;
+        margin-bottom: 8rem;
+    }
+
+
+}
+@media(max-width:640px){
+   
+    .layout__projects,
+    .stats__container,
+    .contact__container,
+    .reviews__grid,
+    .clients__container,
+    .news__container,
+    .footer__container{
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+    .layout__services{
+        margin-left: 3rem;
+        margin-right: 1rem;
+        
+    }
+    .contact__thumb--chat{
+        margin-right: -5rem;
+        
+    }
+    
+    .contact__thumb--laptop{
+        left: 0rem;
+        bottom: 0;
+    }
+    .contact__thumb--mobile{
+        bottom: 0;
+        right: -4rem;
+    }
+    .contact__img{
+        width: 35%;
+    }
+    .footer__fright{
+        flex-basis: 100%;
+        gap:4rem;
+    }
+
+       .footer__widget--50{
+        flex-basis: auto;
+       }
+    
+}
