--- a/10-web2/asset/css/responsive.css
+++ b/10-web2/asset/css/responsive.css
@@ -107,6 +107,9 @@
     .navbar__nav{
         display: none;
     }
+    .navbar__mobile-btn{
+        display: block;
+    }
     .layout__banner{
         min-height: 100%;
         margin: 0 3rem;
