--- a/06-web1/asset/css/styles.css
+++ b/06-web1/asset/css/styles.css
@@ -771,6 +771,7 @@ body{
     background-color: var(--color-secondary);
     border-radius: 0.3rem;
     color: var(--color-principal);
+    cursor: pointer;
 }
 .certificates__container{
     display: flex;
@@ -1107,4 +1108,8 @@ body{
 .contact__iframe{
     width: 100%;
     height: 14rem;
+}
+
+.knoledges__option:hover{
+    background-color: var(--color-title);
 }
